<resources>
    <!-- app name -->
    <string name="app_name">STRONK</string>

    <!-- settings -->
    <string name="action_settings">Settings</string>

    <!-- placeholder strings -->
    <string name="warmup">Warm Up</string>
    <string name="other">Other</string>

    <!-- title of main menu buttons -->
    <string name="title_activity_pull1">Pull 1</string>
    <string name="title_activity_pull2">Pull 2</string>
    <string name="title_activity_push1">Push 1</string>
    <string name="title_activity_push2">Push 2</string>
    <string name="title_activity_legs">Legs 1</string>
    <string name="title_activity_progress">Progress</string>

    <!-- Exercise day -->
    <string name="Pull_1">Pull 1</string>
    <string name="Pull_2">Pull 2</string>
    <string name="Push_1">Push 1</string>
    <string name="Push_2">Push 2</string>
    <string name="Legs_1">Legs 1</string>
    <string name="Legs_2">Legs 2</string>

    <!-- Exercise titles -->
    <string name="OH_Press">OH Press</string>
    <string name="Bench_Press">Bench Press</string>
    <string name="Incline_DB_Press">Incline DB Press</string>
    <string name="OH_Lat">OH SS Lat</string>
    <string name="Deadlift">Deadlift</string>
    <string name="Squat">Squat</string>
    <string name="Front_Squat">Front Squat</string>
    <string name="Romanian_Deadlift">Romanian Deadlift</string>
    <string name="Glute_Ham_Raises">Glute Ham Raises</string>
    <string name="Calf_Raises">Calf Raises</string>
    <string name="BB_Row">BB Row</string>
    <string name="Pull_Ups">Pull Ups</string>
    <string name="Hammer_Curls">Hammer Curls</string>
    <string name="DB_Curls">DB Curls</string>

    <!-- Rest note -->
    <string name="Rest2Min">Rest for 2 minutes after your sets</string>
    <string name="Rest3Min">Rest for 3 minutes after your warm up</string>

    <!-- Intensities -->
    <string name="OneFive">(1 x 5+)</string>
    <string name="ThreeEight">(3 x 8-12)</string>
    <string name="FiveEight">(5 x 8-12)</string>
    <string name="ThreeFive">(3 x 5+)</string>
    <string name="FourEight">(4 x 8-12)</string>
    <string name="FiveFive">(5 x 5)</string>
    <string name="dash">-</string>

    <!-- Set titles -->
    <string name="Set1">Set1</string>
    <string name="Set2">Set2</string>
    <string name="Set3">Set3</string>
    <string name="Set4">Set4</string>
    <string name="Set5">Set5</string>
    <string name="WarmUpRest">Warm Up(3 min rest)</string>

    <!-- Preference textviews -->
    <string name="view_squat">Squat: </string>
    <string name="view_deadlift">Deadlift: </string>
    <string name="view_rom_deadlift">Rom. Deadlift: </string>
    <string name="view_calf_raises">Calf raises: </string>
    <string name="view_front_squats">Front squats: </string>
    <string name="view_glute_ham_raises">Glute ham raises: </string>
    <string name="view_bb_row">BB Row: </string>
    <string name="view_pullup">Pull Up: </string>
    <string name="view_hammer_curl">Hammer Curl: </string>
    <string name="view_db_curl">DB Curl: </string>

    <string name="view_bench_press_5x5">Bench Press 5x5: </string>
    <string name="view_oh_press_5x5">OH Press 5x5: </string>
    <string name="view_bench_press_3x8">Bench Press 3x8: </string>
    <string name="view_oh_press_3x8">OH Press 3x8: </string>
    <string name="view_incline_db">Incline DB: </string>
    <string name="view_oh_triceps_ss_lat_raises">OH SS Lat: </string>

    <string name="kg">KG</string>
    <string name="save">Save</string>
    <string name="start_weight">0</string>


</resources>
