<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPull1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/activity_button_height"
            android:text="@string/Pull_1"
            android:textSize="@dimen/activity_button_text_size" />

        <Button
            android:id="@+id/btnPull2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/activity_button_height"
            android:text="@string/Pull_2"
            android:textSize="@dimen/activity_button_text_size" />

        <Button
            android:id="@+id/btnPush1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/activity_button_height"
            android:text="@string/Push_1"
            android:textSize="@dimen/activity_button_text_size" />

        <Button
            android:id="@+id/btnPush2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/activity_button_height"
            android:text="@string/Push_2"
            android:textSize="@dimen/activity_button_text_size" />

        <Button
            android:id="@+id/btnPrefs"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/activity_button_height"
            android:text="@string/prefs"
            android:textSize="@dimen/activity_button_text_size" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>